# wifi-qr-rs

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
src/: cli.rs  lib.rs  main.rs  models.rs
