[package]
name = "wifi-qr-rs"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
description = "This is a simple rust program that generates a QR code for connecting to a wifi network when scanned."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
env_logger = "0.10.0"
image = "0.23.14"
log = "0.4.17"
qrcode = "0.12.0"
rstest = "0.17.0"
